# brute-http

./: Cargo.toml  README.md  request
src/: connection.rs  error.rs  http.rs  main.rs  utils.rs
src/http/: request.rs  response.rs  transfer.rs
src/utils/: hex.rs
