[package]
name = "brute-http"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
async-native-tls = { version = "0.4", default-features = false, features = ["runtime-tokio"] }
nom = "7"
flate2 = "1"

[dev-dependencies]
pretty_assertions = "1"
